CI/CD Pipeline : Fix Build and Release (again)

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        compiler: clang
+        compiler: [clang]
 
     steps:
     - name: Checkout code
