CI/CD Pipeline : Fix Build and Release (and again bruh)

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -51,5 +51,6 @@ jobs:
         tag_name: ${{ github.event.inputs.tag }}
         name: ${{ github.event.inputs.tag }}
         files: berytonite-${{ runner.os }}.zip
+        prerelease: ${{ github.event.inputs.prerelease == 'true' }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
