CI/CD Pipeline : Add multiplatform on Build and Test

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,38 +5,23 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    name: Build on ${ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        build_type: [Debug, Release]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install Clang
-      run: |
-        sudo apt update
-        sudo apt install -y clang
+    - name: Configure CMake
+      run: cmake -B build -S .
 
-    - name: Set build directory
-      id: vars
-      run: echo "out=build-${{ matrix.build_type }}" >> "$GITHUB_OUTPUT"
-
-    - name: Configure CMake with Clang
-      run: >
-        cmake -B ${{ steps.vars.outputs.out }}
-        -S .
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -DCMAKE_C_STANDARD=23
-        -DCMAKE_C_COMPILER=clang
-        -DCMAKE_CXX_COMPILER=clang++
-
-    - name: Build ${{ matrix.build_type }}
-      run: cmake --build ${{ steps.vars.outputs.out }} --parallel
+    - name: Build
+      run: cmake --build build --parallel
 
     - name: Run tests
-      working-directory: ${{ steps.vars.outputs.out }}
-      if: matrix.build_type == 'Debug'
+      working-directory: build
       run: ctest --output-on-failure
