--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Configure CMake
-      run: cmake -B build -S .
+      shell: bash
+      run: >
+        cmake -B build -S .
+        -DCMAKE_BUILD_TYPE=Release
 
     - name: Build
       run: cmake --build build --parallel
