CI/CD Pipeline : Switch Ninja build system

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -20,6 +20,7 @@ jobs:
       shell: bash
       run: >
         cmake -B build -S .
+        -G Ninja
         -DCMAKE_BUILD_TYPE=Release
 
     - name: Build
