--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -48,12 +48,12 @@ jobs:
           zip -r berytonite-${{ runner.os }}.zip package
         fi
 
-#    - name: Upload Release
-#      uses: softprops/action-gh-release@v2
-#      with:
-#        tag_name: ${{ github.event.inputs.tag }}
-#        name: ${{ github.event.inputs.tag }}
-#        files: berytonite-${{ runner.os }}.zip
-#        prerelease: ${{ github.event.inputs.prerelease == 'true' }}
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Release
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: ${{ github.event.inputs.tag }}
+        name: ${{ github.event.inputs.tag }}
+        files: berytonite-${{ runner.os }}.zip
+        prerelease: ${{ github.event.inputs.prerelease == 'true' }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
